--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "freedcamp",
+  "name": "controle-de-projetos-alpha-v-001",
   "private": true,
   "version": "0.0.0",
   "type": "module",
