--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.17.19",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "lucide-react": "^0.263.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
